# online_university

./: .flake8  .gitignore  README.md  db.sqlite3  pyproject.toml  requirements.txt
docs/database/: create_db.sql  diagram.dbml
elearning/warehouse/: apps.py
elearning/warehouse/helper/: __init__.py  consts.py  type_hints.py
elearning/warehouse/models/: product.py
kernel/: asgi.py  settings.py  urls.py  wsgi.py
painless/models/mixins/: __init__.py  common.py
