[tool.poetry]
name = "online-university"
version = "0.1.0"
description = ""
authors = ["sajad <fallahdoostsajad@gmail.com>"]
readme = "README.md"
packages = [{include = "online_university"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.7"
black = "^23.10.1"
isort = "^5.12.0"
flake8 = "^6.1.0"
pylint = "^3.0.2"
autopep8 = "^2.0.4"
mypy = "^1.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
